# cubo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHUNKING.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRITIQUE.md  Dockerfile  EVALUATION_CHECKLIST.md  FRONTEND_SETUP.md  LICENSE  Makefile  RAG_TESTING_README.md  README.it.md  README.md  README.zh.md  RELEASE.md  SECURITY.md  TO_DO_PAPER.md  bandit-report.json  bench_config.cfg  check_db.py  check_parquet.py  check_recent.py  clear_db.py  config.json  debug_add_doc.py  debug_loader.py  debug_postprocessing.py  debug_reindex.py  debug_retrieval.py  deduplication_error.txt  demonstrate_dual_retrieval.py  docker-compose.yml  download_dolphin.py  evaluation_antigravity.md  full_output.txt  full_test_output.txt  (+54 more)
benchmarks/: bench_bm25_indexing.py  bench_bm25_search.py  fusion_comparison.py  italian_ablation.py  memory_ablation.py  multilingual_stemming_ablation.py  runner.py
cache/: query_cache.json
chroma_db/: chroma.sqlite3  query_cache.pkl
ci/: bench_smoke.yml
configs/: .pre-commit-config.yaml  ablation_configs.json  benchmark_ablations.json  benchmark_config.json  benchmark_retrieval_configs.json  calibration_curves.json  config.example.json  config.json  config_local.json  datasets_manifest.json  enterprise_benchmark_config.json  enterprise_benchmark_config_prod.json
cubo/: __init__.py  config.py  core.py  main.py
docs/: API_INTEGRATION.md  CI_OPTIMIZATION.md  CODE_OF_CONDUCT.md  CRITIQUE.md  E2E_TESTING.md  IMPLEMENTATION_SUMMARY.md  LAPTOP_MODE.md  MEASUREMENT_PROTOCOL.md  PHASE_I_IMPLEMENTATION_SUMMARY.md  PROCESSING.md  RAG_TESTING_README.md  README.md  RRF_FUSION.md  TESTING.md  TEST_SUITE_AUDIT.md  ablation.md  deduplication.md  logging.md  resource_optimization_plan.md
evaluation/: README.md  __init__.py  beir_adapter.py  dashboard.py  database.py  evaluate_saved_data.py  evaluate_stories.py  evaluation.db  integration.py  metrics.py  pyserini_benchmark.py  qar_calibration.py  ragas_evaluator.py
examples/: 01_quick_start.ipynb  02_gdpr_compliance.ipynb  03_multimodal_ocr.ipynb  04_evaluation_benchmarking.ipynb
faiss_store/: cold.index  documents.db  hot.index  metadata.json
frontend/: .env.example  CRITIQUE_FRONTEND.md  Dockerfile  SECURITY.md  TESTING.md  TESTING_EXPANSION.md  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  test-reference.sh  tsconfig.tsbuildinfo
gui/: README.md  components.py  dialogs.py  main_window.py  themes.py
integration_tests/: test_auto_merging.py  test_collection_workflow.py  test_custom_auto_merging.py  test_deep_ingest.py  test_dolphin.py  test_dual_retrieval.py  test_fast_pass_ingest.py  test_ui_update.py
packaging/: package.json  pyproject.toml
requirements/: README.md  pytest.ini  requirements-ci.txt  requirements-core.txt  requirements-dev.txt  requirements-lint.txt  requirements-minimal.txt
results/: manual_summary.csv
scripts/: analysis_csv_check.py  analyze_beir_full.py  analyze_beir_full_more.py  analyze_benchmark.py  audit_tests.py  benchmark_runner.py  bm25_query.py  build_beir_faiss_index.py  calculate_beir_metrics.py  check_db.py  check_hits.py  check_ollama.ps1  check_recent.py  clean_beir_results.py  compare_rrf_best.py  component_stress_test.py  comprehensive_diagnostic.py  compute_and_report_missing_metrics.py  compute_missing_metrics_v2.py  compute_recall.py  convert_bm25_stats_to_whoosh.py  count_beir.py  create_smart_corpus.py  debug_postprocessing.py  deep_ingest.py  download_and_prepare.py  download_beir_dataset.py  download_beir_subsets.py  download_models.py  download_nfcorpus.py  download_ragbench.py  download_ragbench_batch.py  download_ultradomain_subsets.py  e2e_smoke.py  export_whoosh_to_bm25_json.py  fast_pass_ingest.py  generate_embeddings.py  generate_notebook_v2.py  get_ingestion_stats.py  ingestion_service.py  (+59 more)
src/: __init__.py  async_document_processor.py  config.py  custom_auto_merging.py  document_loader.py  dolphin_processor.py  enhanced_document_processor.py  enhanced_thread_manager.py  error_recovery.py  exceptions.py  generator.py  health_monitor.py  logger.py  main.py  model_inference_threading.py  model_loader.py  postprocessor.py  reranker.py  retriever.py  security.py  service_manager.py  thread_manager.py  utils.py
storage/: metadata.db-shm  metadata.db-wal
test-results/: dataset_inspection.txt  report.md  test_api_live.py
tests/: __init__.py  conftest.py  test_bm25_migration.py  test_bm25_searcher_wrapper.py  test_bm25_store_factory.py  test_bm25_store_interface.py  test_calculate_beir_metrics.py  test_chat_template_manager.py  test_chunking_sentence_splitter.py  test_chunking_tokens.py  test_collection_filtering.py  test_config.py  test_cpu_tuner.py  test_cpu_tuner_metrics.py  test_deep_ingestor.py  test_deep_ingestor_doc_types.py  test_deep_ingestor_embedding.py  test_deep_ingestor_integration.py  test_embedding_generator.py  test_enrichment.py  test_error_recovery.py  test_faiss_index.py  test_hardware_detection.py  test_health_monitor.py  test_hierarchical_chunker_critique.py  test_hybrid_compatibility.py  test_hybrid_reranker_integration.py  test_hybrid_strategy_integration.py  test_index_publish_cleanup.py  test_ingestion_manager.py  test_lazy_model_manager.py  test_local_llm_templating.py  test_memory_mapped_faiss.py  test_migrate_chunk_ids.py  test_model_loader_quantized.py  test_monitoring_logging.py  test_new_features.py  test_parsing.py  test_query_router_llm_fallback.py  test_quickstart_scripts.py  (+16 more)
tools/: CLEAR_ICON_CACHE.bat  ablate_quant_routing.py  calc_metrics_from_run.py  calculate_beir_metrics.py  calibrate_quant_routing.py  component_stress_test.py  compute_and_report_missing_metrics.py  compute_missing_metrics_v2.py  diagnostic_tokenizer.py  download_and_prepare.py  download_beir_dataset.py  download_nfcorpus.py  extract_system_metrics.py  generate_italian_data.py  generate_latency_vs_size.py  generate_multilingual_queries.py  generate_notebook.py  generate_plots_from_summary.py  inspect_datasets.py  (+38 more)
(+781 files in other folders)
